--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^1.4.0-beta.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "mddir": "^1.1.1",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
